# Fabrikk

./: .env.example  README.md  bckUp_genesis_crew_main.py  genesis_crew_main.py  requirements.txt  setup_env.py
genesis_crewAI_template/: README.md  pyproject.toml
genesis_crewAI_template/knowledge/: RAG
genesis_crewAI_template/src/genesis/: crew.py  main.py
genesis_crewAI_template/src/genesis/config/: agents.yaml
