[project]
name = "genesis"
version = "0.1.0"
description = "genesis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
genesis = "genesis.main:run"
run_crew = "genesis.main:run"
train = "genesis.main:train"
replay = "genesis.main:replay"
test = "genesis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
